Update detail tour

--- a/html/detail.html
+++ b/html/detail.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/CSS/footer-menu.css">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link rel="stylesheet" href="../CSS/responsive.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="/js/main.js" defer></script>
 
@@ -50,22 +51,27 @@
                 
                 <div class="page__content--book  part--right">
                     <div class="content__book--price"  onclick=" hiddenSend()">
-                        <p>700$</p>
+                        <p>Support</p>
                     </div>
                     <div  id="hidden"  class="page__content--bookbody">
                        <div class="content__book--inf">
-                           <input type="text" placeholder="Name">
-                           <input type="text" placeholder="Surname">
+                           <input type="text" placeholder="Name*" name="name" id="name">
+                           <input type="text" placeholder="Surname" name="Surname">
                        </div>
+                       <span id="namespan"></span>
                        <div class="content__book--inf">
-                           <input type="text" placeholder="Email">
-                           <input type="text" placeholder="Guests">
+                           <input type="email" placeholder="Email*" name="email" id="email">
+                           <input type="text" placeholder="Guests" name="guest">
                        </div>
-                       <div class="content__book--infphone"><input type="text" placeholder="Phone"></div>
-                       <div class="content__book--text"><textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea></div>
-                       <div class="content__book--send">
-                           <p>Send now</p>
+                       <span id="emailspan"></span>
+                       <div class="content__book--infphone"><input type="text" placeholder="Phone*" name="phone" id="phone">
                        </div>
+                       <span id="phonespan"></span>
+                       <div class="content__book--text"><textarea name="message" id="message" cols="30" rows="10" placeholder="Message*" name="message"></textarea>
+                       </div>
+                       <span id="messspan"></span>
+                       <button class="content__book--send" type="submit" onclick="validateForm()">Send now</button>
+                       <p id="sendnow"></p>
                     </div>
                 </div>
             </div>
@@ -102,7 +108,7 @@
                                     <h4>Lăng Bác Hồ</h4>
                                     <p class="title_province text-center"><i class="fas fa-map-pin" style="color: brown;"></i> Hà Nội</p>
                                     <div class="tour--item--content--right price">
-                                        $500
+                                        500000
                                     </div>
                                 </div>
                             </div>
@@ -112,7 +118,7 @@
                                     <h4>Vịnh Hạ Long</h4>
                                     <p class="title_province text-center"><i class="fas fa-map-pin" style="color: brown;"></i> Quảng Ninh</p>
                                     <div class="tour--item--content--right price">
-                                        $1000
+                                        100000
                                     </div>
                                 </div>
                             </div>
@@ -122,7 +128,7 @@
                                     <h4>Vũng Tàu</h4>
                                     <p class="title_province text-center"><i class="fas fa-map-pin" style="color: brown;"></i> Vũng Tàu</p>
                                     <div class="tour--item--content--right price">
-                                        $500
+                                        500000
                                     </div>
                                 </div>
                             </div>
