--- a/html/booknow.html
+++ b/html/booknow.html
@@ -7,87 +7,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="/asset/js/main.js" defer></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <link rel="stylesheet" href="../CSS/footer-menu.css">
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
-    <link rel="stylesheet" href="/CSS/footer_menu.css" type="text/css">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+    <script src="/js/main.js" defer></script>
+    
+
     <title>Book now</title>
 </head>
 
 <body>
     <div class="book_page page">
-
+        <form action="./Booknow_server.html" method="get">
         <div class="img_slidego">
             <img src="../img/imgheader.jpg" alt="">
-        </div>
-
-
-        <div class="page__select">
-            <h5> Search Your Destination</h5>
-            <div class="page__select__search__place">
-
-                <input type="text" id="search_place" placeholder="Enter a destination">
-                <input type="submit" id="sub_search_place" value="Search">
-            </div>
-            <div class="page__select__search__date">
-                <label for="datefrom">Date</label>
-                <input type="date" id="book_datefrom">
-                <input type="date" id="book_dateto">
-            </div>
-            <div class="page__select__search__price">
-                <label for="pricefrom">Price</label>
-                <input type="number" id="pricefrom">
-                <input type="number" id="priceto">
-            </div>
-
         </div>
 
         <div class="page__content content">
             <div class="page__content--information">
                 <div class="information--left">
-                    <p class=" text-center">THÔNG TIN KHÁCH HÀNG ĐẶT TOUR</p>
+                    <p class=" text-center">INFORMATION OF CUSTOMERS BOOKING TOURS</p>
                     <div class="flex_row">
-                        <label class="flex-label" for="name">Họ và tên: </label>
-                        <input class="flex-input" type="text" id="name">
+                        <label class="flex-label" for="name">Full name </label>
+                        <input class="flex-input" type="text" id="name" name="name">
                     </div>
                     <div class="flex_row">
                         <label class="flex-label" for="email">Email: </label>
-                        <input class="flex-input" type="text" id="email">
+                        <input class="flex-input" type="text" id="email" name="email">
                     </div>
                     <div class="flex_row">
-                        <label class="flex-label" for="phone">SĐT: </label>
-                        <input class="flex-input" type="text" id="phone">
+                        <label class="flex-label" for="phone">Phone: </label>
+                        <input class="flex-input" type="text" id="phone" name="phone">
                     </div>
                     <div class="flex_row">
-                        <label class="flex-label" for="note">Ghi chú: </label>
-                        <input class="flex-input" type="text" id="note">
+                        <label class="flex-label" for="note">Note: </label>
+                        <input class="flex-input" type="text" id="note" name="content">
                     </div>
-
+                    
                 </div>
                 <div class="information--right">
                     <img src="../img/img1.jpg" alt="">
                 </div>
             </div>
             <div class="page__content--book">
-                <div class="flex_row">
-                    <label class="flex-label" for="number">Số lượng</label>
-                    <input class="flex-input" type="text" id="number_book" placeholder="1">
-                    <input class="flex-input" type="text" placeholder="Phú Quốc Tour" id="place_book">
+                <div  class="flex_row">
+                    <label class="flex-label" for="number">Quantity</label>
+                    <input class="flex-input" type="text" id="number_book" placeholder="1" >
+                    <input  class="flex-input" type="text" placeholder="Phú Quốc Tour" id="place_book" name="place">
                 </div>
                 <div class="flex_row">
-                    <label class="flex-label" for="price">Đơn giá</label>
+                    <label class="flex-label" for="price">Unit price</label>
                     <input class="flex-input" type="text" id="price">
                 </div>
                 <div class="flex_row">
-                    <label class="flex-label" for="total">TỔNG THANH TOÁN</label>
-                    <input class="flex-input" type="text" id="total">
+                        <label class="flex-label" for="total">Total</label>
+                        <input class="flex-input" type="text" id="total" >
                 </div>
-                <div class="btn  btn-lager  ">
-                    HOÀN THÀNH</a>
+                <div >
+                    <input class="btn_book_done" type="button" value="COMPLETED" onclick="Completed()">
                 </div>
             </div>
         </div>
-
+    </form>
     </div>
 </body>
 
 </html>
+
