--- a/html/review_sample.html
+++ b/html/review_sample.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/CSS/footer-menu.css">
     <link rel="stylesheet" href="/CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <script src="/js/loadUser.js" defer></script>
 </head>
 <body>
     <div class="container-reviewofcustomer">
