--- a/html/booknow.html
+++ b/html/booknow.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="/js/main.js" defer></script>
-    
+    <script src="/js/loadUser.js" defer></script>
 
     <title>Book now</title>
 </head>
