--- a/html/detail.html
+++ b/html/detail.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../CSS/responsive.css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="/js/main.js" defer></script>
-
+    <script src="/js/loadUser.js" defer></script>
     
 
 </head>
