--- a/html/signin_email.html
+++ b/html/signin_email.html
@@ -9,9 +9,11 @@
 
     <link rel="stylesheet" href="/CSS/footer-menu.css">
     <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="/js/main.js" defer></script>
+    <script src="/js/loadUser.js" defer></script>
 </head>
 
 <body>
@@ -30,45 +32,40 @@
                 </ul>
                 <hr>
                 <h3>Đăng nhập với EIV</h3>
-                <form class="form__sign">
+                <form action="#" ng-app="" name="myForm">
                     <div class="form_row">
                         <label class="form__label" for="Email">Email</label>
-                        <input class="form__input" type="text" id="Email" placeholder="Email">
+                        <input class="form__input" type="email" id="Email" placeholder="Email" ng-model="text" name="myEmail"><br>
+                        <span ng-show="myForm.myEmail.$error.email">Not a valid email address</span>
                         <p id="notemail"></p>
                     </div>
                     <div class="form_row">
-                        <label class="form__label" for="pass">Mật khẩu</label>
-                        <input class="form__input" type="password" id="pass" placeholder="Mật khẩu">
-                        <p id="notpass"></p>
+                        <label class="form__label" for="pwd">Mật khẩu</label>
+                        <input class="form__input" type="password" id="pwd" placeholder="Mật khẩu" >
+                        <p id="notpwd"></p>
                     </div>
                     <ul class="reason">
                         <div>
                             <li><a href="/html/register_email.html">Tạo tài khoản</a></li>
                         </div>
                         <div>
-                            <li><a href="/html/forgotPassword.html">Quên mật khẩu?</a></li>
+                            <li><a href="/html/changePassword.html">Quên mật khẩu?</a></li>
                         </div>
                     </ul>
-                    <div class="form_row verify">
-                        <input class="form__button" type="button" name="submit" value="Đăng nhập" onclick="chuyenTrang()" onmouseenter="checkSignEmail()">
+                    <div class="form_row">
+                        <input class="form__button" type="button" name="submit" value="Đăng nhập" onclick="checkSigninEmail()">
                     </div>
                     <p id="match">hoặc tiếp tục với</p>
                     <ul class="other_method">
                         <div>
-                            <li>
-                                <a href="" id="gg">
-                                    <img src="/img/Detail/GGLogo.png" alt="">
-                                    <p>Google</p>
-                                </a>
-                            </li>
+                            <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" id="gg">
+                                <img src="/img/Detail/GGLogo.png" alt=""><p>Google</p>
+                            </a></li>
                         </div>
                         <div>
-                            <li>
-                                <a href="" id="fb">
-                                    <img src="/img/Detail/FBLogo.png" alt="">
-                                    <p>Facebook</p>
-                                </a>
-                            </li>
+                            <li><a href="https://www.facebook.com/" target="_blank" id="fb">
+                                <img src="/img/Detail/FBLogo.png" alt=""><p>Facebook</p>
+                            </a></li>
                         </div>
                     </ul>
                 </form>
