--- a/html/changePassword.html
+++ b/html/changePassword.html
@@ -17,7 +17,8 @@
             font-size: 30px;
         }
         
-        .modal-footer {
+        .myModa,
+        .modal-body {
             background-color: #f9f9f9;
         }
     </style>
@@ -26,19 +27,14 @@
 <body>
 
     <div class="container" id="myBt">
-        <!-- <h2>Change password</h2>
-        Trigger the modal with a button -->
-        <!-- <button type="button" class="btn btn-default btn-lg" id="myBt">Change password</button> -->
-
         <!-- Modal -->
         <div class="modal fade" id="myModa" role="dialog">
             <div class="modal-dialog">
-
                 <!-- Modal content-->
                 <div class="modal-content">
-                    <div class="modal-header" style="padding:35px 50px;">
+                    <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4><span class="glyphicon glyphicon-lock"></span> Change password</h4>
+                        <h4><span class="glyphicon glyphicon-lock text-center"></span> Change password</h4>
                     </div>
                     <div class="modal-body" style="padding:40px 50px;">
                         <form role="form">
@@ -50,14 +46,13 @@
                                 <label for="usrname"><span class="glyphicon glyphicon-user"></span> Retype new password</label>
                                 <input type="text" class="form-control" id="usrname" placeholder="Enter email">
                             </div>
-                            <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"  id="myModal"></span>Update </button>
-
+                            <button type="submit" class="btn btn-success btn-block"><span class="glyphicon glyphicon-off"  id="myModal"></span>   <a href="./home_index.html">Update</a></button>
                         </form>
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
-                        <p>Not a member? <a href="#">Sign Up</a></p>
-                        <p><a href="#">Register</a></p>
+                        <p>A member? <a href="./signin_email.html">Sign in</a></p>
+                        <p><a href="./register.html">Register</a></p>
                     </div>
                 </div>
 
@@ -70,9 +65,9 @@
             $("#myBt").show(function() {
                 $("#myModa").modal();
             });
-            $("#myModal").click('hidden.bs.modal', function() {
-                alert('Successful!');
-            });
+            // $("#myModal").click('hidden.bs.modal', function() {
+            //     alert('Successful!');
+            // });
         });
     </script>
 
