--- a/html/footer.html
+++ b/html/footer.html
@@ -16,7 +16,7 @@
     <div class="page">
         <div id="page__footer">
             <div class="page__footer--left">
-                <h2 class="text-center">Travel with us</h2>
+                <h2 class="text-center" style="color: white;">Travel with us</h2>
                 <img src="/img/logo.png" alt="" class="img-center">
                 <div class="footer-icon-contact">
                     <a href="">
