--- a/html/signin_phone.html
+++ b/html/signin_phone.html
@@ -24,7 +24,7 @@
             <div class="form__option--si">
                 <ul>
                     <div>
-                        <li><a href="/html/signin_email.html" >Email</a></li>
+                        <li><a href="/html/signin_email.html">Email</a></li>
                     </div>
                     <div>
                         <li><a href="" id="phone">Di động</a></li>
@@ -45,10 +45,10 @@
                     </div>
                     <ul class="reason">
                         <div>
-                            <li><a href="/html/register_email.html">Tạo tài khoản</a></li>
+                            <li><a href="/html/register.html">Tạo tài khoản</a></li>
                         </div>
                         <div>
-                            <li><a href="/html/changePassword.html">Quên mật khẩu?</a></li>
+                            <li><a href="/html/forgot_password.html">Quên mật khẩu?</a></li>
                         </div>
                     </ul>
                     <div class="form_row">
@@ -57,14 +57,20 @@
                     <p id="match">hoặc tiếp tục với</p>
                     <ul class="other_method">
                         <div>
-                            <li><a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" id="gg">
-                                <img src="/img/Detail/GGLogo.png" alt=""><p>Google</p>
-                            </a></li>
+                            <li>
+                                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" id="gg">
+                                    <img src="/img/Detail/GGLogo.png" alt="">
+                                    <p>Google</p>
+                                </a>
+                            </li>
                         </div>
                         <div>
-                            <li><a href="https://www.facebook.com/" target="_blank" id="fb">
-                                <img src="/img/Detail/FBLogo.png" alt=""><p>Facebook</p>
-                            </a></li>
+                            <li>
+                                <a href="https://www.facebook.com/" target="_blank" id="fb">
+                                    <img src="/img/Detail/FBLogo.png" alt="">
+                                    <p>Facebook</p>
+                                </a>
+                            </li>
                         </div>
                     </ul>
                 </form>
